feat: 添加 Instagram 数据抓取功能，包含链接收集和详情获取流程

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "homepage": "https://github.com/wangrongding",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "openins": "node openins.js",
+    "search": "node get-search-urls.js",
+    "get-details": "node index.js",
+    "start": "node run.js"
   },
   "keywords": [],
   "license": "ISC",
